crates/reinhardt-pages/tests/ui/form/fail/optgroup_rejects_datalist.stderr
error: Datalist options cannot contain OptGroup
 --> tests/ui/form/fail/optgroup_rejects_datalist.rs:9:15
  |
9 |                 options: [OptGroup("Grouped") {
  |                           ^^^^^^^^
